# standup-rs

./: .travis.yml  Cargo.toml  README.md
src/: config.rs  gcalendar.rs  github.rs  main.rs  report.rs
