[package]
name = "standup_rs"
version = "0.1.0"
authors = ["Maxim Sukharev <max@smacker.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.2"
reqwest = "0.9"
time = "0.1.42"
chrono = { version = "0.4.7", features = ["serde"] }
